syntax = "proto3";
option go_package = "./;pb";

import "google/protobuf/empty.proto";
import "user.proto";
import "problem.proto";

service DBService{
  // user接口
  rpc GetUserDataByMobile(GetUserDataByMobileRequest) returns(GetUserResponse);
  rpc GetUserDataByUid(GetUserDataByUidRequest) returns(GetUserResponse);
  rpc CreateUserData(CreateUserRequest) returns(CreateUserResponse);
  rpc UpdateUserData(UpdateUserRequest) returns(google.protobuf.Empty);
  rpc DeleteUserData(DeleteUserRequest) returns(google.protobuf.Empty);
  rpc GetUserList(GetUserListRequest) returns(GetUserListResponse);
  rpc GetUserSolvedList(GetUserSolvedListRequest) returns(GetUserSolvedListResponse);

  // problem接口
  rpc GetProblemData(GetProblemRequest) returns(GetProblemResponse);
  rpc CreateProblemData(CreateProblemRequest) returns(CreateProblemResponse);
  rpc UpdateProblemData(UpdateProblemRequest) returns(google.protobuf.Empty);
  rpc DeleteProblemData(DeleteProblemRequest) returns(google.protobuf.Empty);
  rpc GetProblemList(GetProblemListRequest) returns(GetProblemListResponse);
  rpc QueryProblemWithName(QueryProblemWithNameRequest) returns(QueryProblemWithNameResponse);

  rpc GetUserSubmitRecord(GetUserSubmitRecordRequest) returns(GetUserSubmitRecordResponse);
  rpc UpdateUserSubmitRecord(UpdateUserSubmitRecordRequest) returns(google.protobuf.Empty);
}

// 获取用户信息
message GetUserDataByMobileRequest{
  int64 mobile = 1;
}
message GetUserDataByUidRequest{
  int64 id = 1;
}
message GetUserResponse{
  UserInfo data = 1;
}

message GetUserSolvedListRequest {
  int64 uid = 1;
}
message GetUserSolvedListResponse {
  repeated int64 problem_solved_list = 1;
}

// 创建
message CreateUserRequest{
  UserInfo data = 1;
}
message CreateUserResponse{
  int64 id = 1;
}

// 更新
message UpdateUserRequest{
  UserInfo data = 1;
}

// 删除
message DeleteUserRequest{
  int64 id = 1;
}

// 用户列表分页参数
message GetUserListRequest{
  int32 cursor = 1; // next_id
}

message GetUserListResponse{
  int32 total = 1;
  repeated UserInfo data = 2;
  int32 cursor = 3; // next_id
}

message GetProblemRequest{
  int64 id = 1;
}
message GetProblemResponse{
  Problem data = 1;
}

message CreateProblemRequest{
  Problem data = 1;
}
message CreateProblemResponse{
  int64 id = 1;
}

message UpdateProblemRequest{
  Problem data = 1;
}
message DeleteProblemRequest{
  int64 id = 1;
}

// 题目列表分页参数
message GetProblemListRequest{
  int32 cursor = 1; // next_id
}

message GetProblemListResponse{
  int32 total = 1;
  repeated Problem data = 2;
  int32 cursor = 3; // next_id
}

message GetUserSubmitRecordRequest{
  int64 user_id = 1;
}
message GetUserSubmitRecordResponse{
  repeated UserSubmitRecord data = 1;
}

message QueryProblemWithNameRequest{
  string name = 1;
}
message QueryProblemWithNameResponse{
  repeated Problem data = 1;
}

message UpdateUserSubmitRecordRequest{
  int64 user_id = 1;
  int64 Problem_id = 2;
  string code = 3;
  string result = 4;
  string lang = 5;
}